# starling

./: .gitignore  README.md  pyproject.toml  test.py
examples/: example_sender.py
for later/: _rate.pyx  rate.py
starling/: __init__.py  constants.py  introspection.py  nexus.py  publication.py  record.py  simpleudp.py  snapshot_logger.py  subscription.py  throttle.py
starling_py.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testing/: serializer.py
